# PhotoShare_fastapi

./: .gitignore  .readthedocs.yaml  Dockerfile  README.md  docker-compose.yml  env.example  main.py  manage.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt
docs/: conf.py  index.rst  requirements.txt
migrations/: env.py
migrations/versions/: 228ba19a15f6_change_capasity_of_refreshtoken_columns.py  24206b709311_change_name_transformation_to_.py  387a2c47457f_add_refreshtoken_table.py  578b90e4fece_change_in_comment_table_from_uploaded_.py  84419c32b5e0_delete_qr_url_from_photo.py  8589493b8707_init.py  9e16d1e8b2d9_add_logout_access_tokens_table.py
src/conf/: config.py  constant.py  constants.py  errors.py  logger.py
src/database/: db.py  dependencies.py  models.py
src/repository/: abstract.py  comments.py  photos.py  tags.py  users.py
src/routes/: auth.py  comments.py  photos.py  tags.py  users.py
src/schemas/: comments.py  photos.py  tags.py  users.py
src/services/: abstract.py  auth.py  avatar.py  password.py  photo_storage_provider.py  qr_code.py
tests/database/: test_models.py
tests/repository/: test_comments.py  test_photos.py  test_tags.py  test_users.py
tests/routes/: conftest.py  test_auth.py  test_comments.py  test_photos.py  test_tags.py  test_users.py
