[tool.poetry]
name = "photoshare-fastapi"
version = "0.1.0"
description = ""
authors = ["Paweł Szumański <pawel.szumanski@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
pydantic-settings = "^2.2.1"
libgravatar = "^1.0.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
bcrypt = "^4.1.3"
python-multipart = "^0.0.9"
redis = "^5.0.4"
prompt-toolkit = "^3.0.43"
validator-collection = "^1.5.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
